[130] Finished first draft of ci/cd section

--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -10,3 +10,21 @@
   year={2014},
   publisher={IEEE}
 }
+
+%http://www.dccia.ua.es/dccia/inf/asignaturas/MADS/2013-14/lecturas/10_Fowler_Continuous_Integration.pdf
+@article{fowler2006continuous,
+  title={Continuous integration},
+  author={Fowler, Martin and Foemmel, Matthew},
+  journal={(Thought-Works)},
+  howpublished={\url{http://www.thoughtworks.com/ContinuousIntegration.pdf}},
+  pages={122},
+  year={2006}
+}
+
+%http://agilemanifesto.org/principles.html
+@misc{agileprinciples,
+  title = {Principles behind the Agile Manifesto},
+  howpublished = {\url{http://agilemanifesto.org/principles.html}},
+  note = {Accessed: 2017-03-19},
+  author = {Beedle, Mike and Bennekum, Arie van and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Highsmith, Jim and  Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Martin C. and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave}
+}
