--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -60,164 +60,118 @@ Include details of
 \end{itemize}
 
 %==============================================================================
-\section{Alice}
-\label{sec:alice}
-
-ALICE \cite{alice} was beginning to get very tired of sitting by her sister
-on the bank and of having nothing to do: once or twice she had peeped into
-the book her sister was reading, but it had no pictures or conversations in
-it, ``and what is the use of a book,'' thought Alice, ``without pictures or
-conversations?'
-
-So she was considering, in her own mind (as well as she could, for the hot
-day made her feel very sleepy and stupid), whether the pleasure of making a
-daisy-chain would be worth the trouble of getting up and picking the
-daisies, when suddenly a White Rabbit with pink eyes ran close by her.
-
-There was nothing so very remarkable in that; nor did Alice think it so
-very much out of the way to hear the Rabbit say to itself ``Oh dear! Oh
-dear! I shall be too late!'' (when she thought it over afterwards it
-occurred to her that she ought to have wondered at this, but at the time it
-all seemed quite natural); but, when the Rabbit actually took a watch out
-of its waistcoat-pocket, and looked at it, and then hurried on, Alice
-started to her feet, for it flashed across her mind that she had never
-before seen a rabbit with either a waistcoat-pocket, or a watch to take out
-of it, and burning with curiosity, she ran across the field after it, and
-was just in time to see it pop down a large rabbit-hole under the hedge.
-
-In another moment down went Alice after it, never once considering how in
-the world she was to get out again.
-
-The rabbit-hole went straight on like a tunnel for some way, and then
-dipped suddenly down, so suddenly that Alice had not a moment to think
-about stopping herself before she found herself falling down what seemed to
-be a very deep well.
-
-Either the well was very deep, or she fell very slowly, for she had plenty
-of time as she went down to look about her, and to wonder what was going to
-happen next. First, she tried to look down and make out what she was coming
-to, but it was too dark to see anything: then she looked at the sides of
-the well, and noticed that they were filled with cupboards and
-book-shelves: here and there she saw maps and pictures hung upon pegs. She
-took down ajar from one of the shelves as she passed: it was labeled
-``ORANGE MARMALADE'' but to her great disappointment it was empty: she did
-not like to drop the jar, for fear of killing somebody underneath, so
-managed to put it into one of the cupboards as she fell past it.
-
-``Well!'' thought Alice to herself ``After such a fall as this, I shall think
-nothing of tumbling down-stairs! How brave they'll all think me at home!
-Why, I wouldn't say anything about it, even if I fell off the top of the
-house!'' (which was very likely true.)
-
-Down, down, down. Would the fall never come to an end? ``I wonder how many
-miles I've fallen by this time?'' she said aloud. ``I must be getting
-somewhere near the centre of the earth. Let me see: that would be four
-thousand miles down, I think-'' (for, you see, Alice had learnt several
-things of this sort in her lessons in the school-room, and though this was
-not a very good opportunity for showing off her knowledge, as there was no
-one to listen to her, still it was good practice to say it over) `` yes
-that's about the right distance -- but then I wonder what Latitude or
-Longitude I've got to?'' (Alice had not the slightest idea what Latitude
-was, or Longitude either, but she thought they were nice grand words to
-say.)
-
-Presently she began again. ``I wonder if I shall fall fight through the
-earth! How funny it'll seem to come out among the people that walk with
-their heads downwards! The antipathies, I think-'' (she was rather glad
-there was no one listening, this time, as it didn't sound at all the right
-word) ``but I shall have to ask them what the name of the country is, you
-know. Please, Ma'am, is this New Zealand? Or Australia?'' (and she tried to
-curtsey as she spoke- fancy, curtseying as you're falling through the air!
-Do you think you could manage it?) ``And what an ignorant little girl she'll
-think me for asking! No, it'll never do to ask: perhaps I shall see it
-written up somewhere.''
-
-Down, down, down. There was nothing else to do, so Alice soon began talking
-again. ``Dinah'll miss me very much to-night, I should think!'' (Dinah was
-the cat.) ``I hope they'll remember her saucer of milk at tea-time. Dinah,
-my dear! I wish you were down here with me! There are no mice in the air,
-I'm afraid, but you might catch a bat, and that's very like a mouse, you
-know. But do cats eat bats, I wonder?'' And here Alice began to get rather
-sleepy, and went on saying to herself, in a dreamy son of way, ``Do cats eat
-bats? Do cats eat bats?'' and sometimes ``Do bats eat cats?'' for, you see, as
-she couldn't answer either question, it didn't much matter which way she
-put it. She felt that she was dozing off, and had just begun to dream that
-she was walking hand in hand with Dinah, and was saying to her, very
-earnestly, ``Now, Dinah, tell me the truth: did you ever eat a bat?'' when
-suddenly, thump! thump! down she came upon a heap of sticks and dry leaves,
-and the fall was over.
-
-Alice was not a bit hurt, and she jumped up on to her feet in a moment: she
-looked up, but it was all dark overhead: before her was another long
-passage, and the White Rabbit was still in sight, hurrying down it. There
-was not a moment to be lost: away went Alice like the wind, and was just in
-time to hear it say, as it turned a comer, ``Oh my ears and whiskers, how
-late it's getting!'' She was close behind it when she turned the comer, but
-the Rabbit was no longer to be seen: she found herself in a long, low hall,
-which was lit up by a row of lamps hanging from the roof.
-
-There were doors all round the hall, but they were all locked; and when
-Alice had been all the way down one side and up the other, trying every
-door, she walked sadly down the middle, wondering how she was ever to get
-out again.
-
-Suddenly she came upon a little three-legged table, all made of solid
-glass: there was nothing on it but a tiny golden key, and Alice's first
-idea was that this might belong to one of the doors of the hall; but, alas!
-either the locks were too large, or the key was too small, but at any rate
-it would not open any of them. However, on the second time round, she came
-upon a low curtain she had not noticed before, and behind it was a little
-door about fifteen inches high: she tried the little golden key in the
-lock, and to her great delight it fitted!
-
-\input{figures/alice}
-
-Alice opened the door (see Figure \ref{fig:alice}) and found that it
-led into a small passage, not much larger than a rat-hole: she knelt
-down and looked along the passage into the loveliest garden you ever
-saw. How she longed to get out of that dark hall, and wander about
-among those beds of bright flowers and those cool fountains, but she
-could not even get her head through the doorway; ``and even if my head
-would go through,'' thought poor Alice, ``it would be of very little
-use without my shoulders. Oh, how I wish I could shut up like a
-telescope! I think I could, if I only knew how to begin.'' For, you
-see, so many out-of-the- way things had happened lately, that Alice
-had begun to think that very few things indeed were really impossible.
-
+%\section{Alice}
+%\label{sec:alice}
+%\input{figures/alice}
 %==============================================================================
 \section{Continuous Integration and Continuous Deployment Considerations}
 \label{sec:CICD}
 
 The project used a multitude of Continuous Integration (CI) and Continuous
- Deployment (CD) techniques. A CI server's purpose "is to check the code
+ Deployment (sometimes Delivery) (CD) techniques. A CI server's purpose "is to check the code
  repository for changes, check out the code if it spots any, and run a
  list of commands to trigger the build."\cite{meyer2014continuous} A build is "ideally more than just
  compiling—it should also include a thorough test suite to help verify that the code
  still works with every change."\cite{meyer2014continuous} This gives a development
  team a quick, automated way of checking their code works, follows a style guide and
- doesn't break any other work.
+ doesn't break any other work. 
+ 
+One of the key concepts of CI is often phrased as: "Commit Daily, 
+ Commit Often"\cite{meyer2014continuous}. For our project, this was sometimes a struggle. 
+ This was due to a small number of factors, which boiled down to: "We don't work on the project 
+ every day", and "I'm not used to git". There was little we could do to remedy the former issue - 
+ all we could do was commit often \textit{whilst we worked on the project}. The gitflow 
+ branching system we used in the VCS (see section \ref{sec:VCS}) was unfamiliar to several 
+ members of the team, and it took time for everyone to become accustomed to the system. As the
+ project progressed however, more builds were made, more commits pushed, and more bugs found.
 
-\subsection{Continuous Integration}
-\label{sec:CICD/CI}
+Another hurdle at which we fell was getting into the habit of writing tests for our code. I shall 
+ mention this briefly here, but for more details please see section \ref{sec:testing}. In Fowler's 
+ 2006 paper on CI, he says: "Imperfect tests, run frequently, are much better than perfect tests 
+ that are never written at all."\cite{fowler2006continuous}
+ 
+ %TODO: COVERAGE PICTURE
 
-%TODO: Finish description of gitlab CI
+Continuous Deployment is the practice of continually deploying working builds to production
+ as often as possible. It adheres to the Agile principles of:
+ \begin{itemize}
+ \item
+ Our highest priority is to satisfy the customer
+ through early and continuous delivery
+ of valuable software. \cite{agileprinciples}
+ \item 
+ Deliver working software frequently, from a 
+ couple of weeks to a couple of months, with a 
+ preference to the shorter timescale. \cite{agileprinciples}
+ \end{itemize}
+ In our project, as soon as a new feature is merged into the dev branch,
+ tests are run, and then the changes are deployed to a staging server, hosted by firebase. Similarly,
+ as soon as dev is merged into master, master is pushed to our production server, also hosted by firebase.
+ The dev branch was typically merged into master once a week, allowing time for any changes to be made 
+ to features that weren't quite perfect, and to iron out any bugs that were found after time in dev.
+ 
 Our CI and CD was operated using Gitlab's integrated CI system. This uses docker to
- run a set of instructions defined in the 'gitlab-ci.yml' file. Instructions
- are separated into tasks. Tasks belong to stages - in our project, these were
- "test" and "deploy". The tasks are run as builds within a pipeline.
+ run a set of instructions defined in the 'gitlab-ci.yml' file.  Instructions are 
+ separated into tasks. Tasks belong to stages - in our project, these were
+ "test" and "deploy". The tasks are run as builds within a pipeline. The docker instances were
+ in some cases hosted for free by Gitlab (sponsored by a cloud company). In other cases,
+ builds were run on team computers. A common upper limit for build time is quoted as 
+ 10 minutes\cite{fowler2006continuous} - ours typically ranged from 5-15 minutes, with some exceptions that were 
+ typically waiting on the gitlab CI runners to free up. The single largest time-drain was
+ running \texttt{npm install} every time docker span up a new instance. Running tests typically took under
+ a minute after this.
+ 
+ %TODO: Times Figure
+ \input{figures/cicd_build_duration}
 
-%TODO: Describe Linting task
-%TODO: Describe testing task
 
-\subsection{Continuous Deployment}
-\label{sec:CICD/CD}
+% Describe Linting task
+The first task used by the project's 'test' stage ran a series of lint checks over the 
+ project's source code. Linting involves performing static analysis on code to detect bugs 
+ or violations of a style guide. These kind of checks are also performed by compilers and 
+ so on. These issues can range from missing semicolons, to using a mix of 
+ double and single quotes, to whether a function is never called. The task tested CSS, 
+ JSON, typescript, javascript,  HTML and LESS. Whilst this was often annoying, these tests 
+ did help maintain a higher quality of code in the codebase. As our policy was to not allow a 
+ merge to dev take place if a branch was not passing tests, we had a method of 
+ enforcing that the standards we defined were upheld.
 
-%TODO: Describe deployment (staging) task
-%TODO: Describe deployment (prod) task
+% Describe testing task
+The second task ran the project's tests. Again, this task had to complete successfully in 
+ order for a branch to be merged into dev. This stage also generated coverage reports which 
+ were used to give the team an indication of how well our code was tested.
+ 
+ \input{figures/cicd_failed_pipeline}
+ 
+% Considered combining test tasks
+Merging these two tasks was considered, but left aside for now. The tasks take 5-10 minutes 
+ each to run, and are run in parallel. The downside of this separation is the fact that \texttt{npm install} 
+ is run twice. However, by leaving the tasks separate, we get a quicker, clearer indication
+ of which part of the stage failed - actual functionality, or a style issue.
+
+ \input{figures/cicd_coverage_buttons}
+
+% Describe deployment tasks
+The Continuous deployment tasks were both essentially the same, but related to which branch was being 
+ committed to. As both dev and master can only be merged into instead of committed to, these tasks can 
+ be run only on merge commits to them. The tasks run tests (to allow coverage reports for the branches) 
+ and then deploy to our live servers. The dev branch deploys to the staging zone, and 
+ master to our production site. 
+ 
+The fact that this is automated helps encourage rapid deployment, as the steps take some time, and are 
+ boring for people to do. This methodology takes out the human steps, and means that the development team 
+ can focus on development. These rapid deployments also help by making it easy for the team to demonstrate 
+ and generate feedback from the public.
 
 
-%TODO: Add images of pipeline running, describe test coverage,
 % consider how it helped us and how it could have been improved
+The CI and CD processes helped us by keeping our code of high quality, preventing broken commits and reducing 
+ manual time spent doing menial tasks. However, it took a fairly large period of time to get working and to
+ optimise into time chunks that were consistent with the goal of 10 minutes. It is arguable that the time 
+ could have been better spent working on the actual project itself. As a counterpoint to this, it could be
+ argued that the CI and CD has saved the development team time in fixing bugs later on, and by ensuring code is more
+ readable, reducing time wasted understanding the code.
+
 
 %==============================================================================
 
