some draft thoughts

--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -52,9 +52,20 @@ arose during the project...
 
 Include details of 
 
+\subsection{Client Background}
 \begin{itemize}
 \item The customer organisation and background.
-\item The rationale and initial objectives for the project.
+\end{itemize}
+
+\subsection{Initial Objective}
+\begin{itemize}
+\item Clubs
+\item Teams
+\item Players
+\end{itemize}
+
+\subsection{Summary}
+\begin{itemize}
 \item The final software was delivered for the customer.
 \end{itemize}
 
