[133] Started frontend section

--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -21,7 +21,14 @@
 
 \begin{abstract}
 
-The abstract goes here
+Report on Team Project 3 coursework for Group V. The GRN Fanzone is a
+ fan engagement web application developed to interface with the Global Rugby
+ Network's online platform. The project tried to utilise 
+ emerging technologies ranging from Angular to Firebase, and use
+ cutting-edge methodologies, such as Test Driven Development and Agile
+ project management. This report covers some of the considerations taken
+ during development and explains some of the benefits and disadvantages
+ of the way the development team operated.
 
 \end{abstract}
 
@@ -171,6 +178,28 @@ The CI and CD processes helped us by keeping our code of high quality, preventin
  could have been better spent working on the actual project itself. As a counterpoint to this, it could be
  argued that the CI and CD has saved the development team time in fixing bugs later on, and by ensuring code is more
  readable, reducing time wasted understanding the code.
+
+%==============================================================================
+\section{Frontend Technology Considerations}
+\label{sec:Frontend}
+
+At the start of the project, GRN chose to give us a set of technologies they 
+ wanted us to use. These included defining Angular 2 as our frontend framework.
+ Angular is a framework maintained by google, which has been gaining popularity
+ over the last 8 years. The framework uses typescript, 
+ a type safe flavour of javascript. It focuses on being portable, high performance
+ and easy to write. Many of the contributors to Angular are from Google, but 
+ the project is open source under the MIT license and anyone can commit to it. 
+ 
+ % Pros and cons of ng-cli
+ 
+ % Why we liked it (easy to maintain, works out the box, good documentation)
+ 
+ % why we disliked it (steep learning curve) 
+ 
+ % How easy it was to test
+ 
+ % Key concepts of angular that fit well with agile
 
 
 %==============================================================================
