--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -23,8 +23,24 @@
 
 %http://agilemanifesto.org/principles.html
 @misc{agileprinciples,
-  title = {Principles behind the Agile Manifesto},
+  title={Principles behind the Agile Manifesto},
   howpublished = {\url{http://agilemanifesto.org/principles.html}},
   note = {Accessed: 2017-03-19},
   author = {Beedle, Mike and Bennekum, Arie van and Cockburn, Alistair and Cunningham, Ward and Fowler, Martin and Highsmith, Jim and  Hunt, Andrew and Jeffries, Ron and Kern, Jon and Marick, Brian and Martin, Martin C. and Schwaber, Ken and Sutherland, Jeff and Thomas, Dave}
+}
+
+%http://andrewaustin.com/an-overview-of-angularjs-for-managers/
+@misc{angularjsoverview,
+  title = {An Overvi of AngularJS for Managers},
+  howpublished = {\url{http://andrewaustin.com/an-overview-of-angularjs-for-managers}},
+  note = {Accessed: 2017-03-20},
+  author = {Austin, Andrew}
+}
+
+%https://angular.io/features.html
+@misc{angular_features,
+  title = {Angular Features and Benefits},
+  howpublished = {\url{https://angular.io/features.html}},
+  note = {Accessed: 2017-03-20},
+  author = {Google}
 }
