[133] Finished frontend report, proofread

--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -44,3 +44,14 @@
   note = {Accessed: 2017-03-20},
   author = {Google}
 }
+
+%http://www.academia.edu/download/41053212/A_Research_Study_on_Importance_of_Testing_and_Quality___Assurance_on_SDLC_Models.pdf
+@article{tuteja2012testing,
+  title={A Research Study on importance of Testing and Quality Assurance in Software Development Life Cycle (SDLC) Models},
+  author={Tuteja, Maneela and Dubey, Gaurav},
+  journal={International Journal of Soft Computing and Engineering (IJSCE)},
+  volume={2},
+  number={3},
+  pages={251--257},
+  year={2012}
+}
