--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -16,7 +16,7 @@
   },
 
   "Dashboard": {
-    "Dashboard":"Dashboard",
+    "Dashboard": "Dashboard",
     "ShowMore": "Show More"
   },
 
@@ -33,14 +33,12 @@
   },
 
   "Login": {
-    "Title":"Sign In"
+    "Title": "Sign In"
   },
 
   "NavBar": {
-    "Dashboard":"Dashboard",
-    "List": "List",
     "Language": "Language",
-    "Logout":"Logout"
+    "Logout": "Logout"
   },
 
   "PlayerProfile": {
@@ -69,8 +67,7 @@
   },
 
   "UserProfile": {
-    "UserProfile":"User Profile",
-    "Email": "Email",
+    "UserProfile": "User Profile",
     "Following": "Following",
     "SeeAll": "See all",
     "Players": "Players",
@@ -82,14 +79,15 @@
     "Players": "Players",
     "Teams": "Teams",
     "Clubs": "Clubs",
-    "Users":"Users",
     "Fixtures": "Fixtures",
     "Location": "Location",
     "Age": "Age",
     "AgeGroup": "Age Group"
   },
 
-  "Search": {},
+  "Search": {
+    "SearchBoxPlaceholder": "Search"
+  },
 
   "TeamProfile": {
     "TeamProfile": "Team Profile",
