--- a/src/i18n/zh.json
+++ b/src/i18n/zh.json
@@ -21,9 +21,9 @@
   },
 
   "Fixture": {
-    "Fixture": "Fixture",
-    "Home": "Home",
-    "Away": "Away"
+    "Fixture": "Fixture", //TODO
+    "Home": "Home", //TODO
+    "Away": "Away" //TODO
   },
 
   "List": {
@@ -33,12 +33,10 @@
   },
 
   "Login": {
-    "Title":"登录"
+    "Title": "登录"
   },
 
   "NavBar": {
-    "Dashboard":"新动态",
-    "Language": "语言",
     "List":"列表",
     "Logout":"退出"
   },
@@ -61,6 +59,7 @@
 
   "Post": {
     "likes": "喜欢",
+    "like": "like", //TODO
     "SaveChanges": "保存更改",
     "Close": "关闭",
     "ShowMore": "显示更多",
@@ -69,7 +68,6 @@
 
   "UserProfile": {
     "UserProfile":"用户资料",
-    "Email": "电子邮件地址",
     "Following": "正在关注",
     "SeeAll": "显示全部",
     "Players": "球员",
@@ -81,8 +79,7 @@
     "Players": "球员",
     "Teams": "球队",
     "Clubs": "俱乐部",
-    "Users":"用户",
-    "Fixtures": "Fixtures",
+    "Fixtures": "Fixtures", //TODO
     "Location": "居住地",
     "Age": "年龄",
     "AgeGroup": "年龄段"
@@ -101,12 +98,11 @@
     "Description": "简介",
     "Players": "球员",
     "Posts": "发帖",
-    "UpcomingFixtures": "Upcoming Fixtures",
-    "RecentFixtures": "Recent Fixtures"
+    "UpcomingFixtures": "Upcoming Fixtures", //TODO
+    "RecentFixtures": "Recent Fixtures" //TODO
   },
 
   "TeamsFollowed": {
     "TeamsFollowed": "已关注球队"
   }
 }
-
