--- a/src/i18n/gr.json
+++ b/src/i18n/gr.json
@@ -16,14 +16,14 @@
   },
 
   "Dashboard": {
-    "Dashboard":"Τοίχος",
+    "Dashboard": "Τοίχος",
     "ShowMore": "Περισσότερα"
   },
 
   "Fixture": {
-    "Fixture": "Fixture",
-    "Home": "Home",
-    "Away": "Away"
+    "Fixture": "Fixture", //TODO
+    "Home": "Home", //TODO
+    "Away": "Away" //TODO
   },
 
   "List": {
@@ -33,14 +33,12 @@
   },
 
   "Login": {
-    "Title":"Συνδεθείτε"
+    "Title": "Συνδεθείτε"
   },
 
   "NavBar": {
-    "Dashboard":"Τοίχος",
-    "List":"Λίστα",
     "Language": "Γλώσσα",
-    "Logout":"Αποσυνδέση"
+    "Logout": "Αποσυνδέση"
   },
 
   "PlayerProfile": {
@@ -69,8 +67,7 @@
   },
 
   "UserProfile": {
-    "UserProfile":"Προφίλ Χρήστη",
-    "Email": "Ηλεκτρονική Διεύθυνση",
+    "UserProfile": "Προφίλ Χρήστη",
     "Following": "Ακολουθείτε",
     "SeeAll": "Προβολή Όλων",
     "Players": "Παίκτες",
@@ -82,14 +79,15 @@
     "Clubs": "Σύλλογοι",
     "Teams": "Ομάδες",
     "Players": "Παίκτες",
-    "Users": "Users",
-    "Fixtures": "Fixtures",
+    "Fixtures": "Fixtures", //TODO
     "Location": "Τοποθεσία",
     "Age": "Ηλικία",
     "AgeGroup": "Ηλικιακή ομάδα"
   },
 
-  "Search": {},
+  "Search": {
+    "SearchBoxPlaceholder": "Search..." //TODO
+  },
 
   "TeamProfile": {
     "TeamProfile": "Προφίλ Ομάδας ",
@@ -100,12 +98,11 @@
     "Description": "Περιγραφή",
     "Players": "Παίκτες",
     "Posts": "Δημοσιεύσεις",
-    "UpcomingFixtures": "Upcoming Fixtures",
-    "RecentFixtures": "Recent Fixtures"
+    "UpcomingFixtures": "Upcoming Fixtures", //TODO
+    "RecentFixtures": "Recent Fixtures" //TODO
   },
 
   "TeamsFollowed": {
     "TeamsFollowed": "Ομάδες που Ακολουθείτε"
   }
-
 }
