case study - Initial Objectives

--- a/Documentation/Dissertation/dissertation.tex
+++ b/Documentation/Dissertation/dissertation.tex
@@ -1,5 +1,5 @@
 % This example An LaTeX document showing how to use the l3proj class to
-% write your report. Use pdflatex and bibtex to process the file, creating 
+% write your report. Use pdflatex and bibtex to process the file, creating
 % a PDF file as output (there is no need to use dvips when using pdflatex).
 
 
@@ -34,9 +34,9 @@ The abstract goes here
 %==============================================================================
 \section{Introduction}
 
-Software engineering 
+Software engineering
 
-This paper presents a case study of... 
+This paper presents a case study of...
 
 
 %% Final paragraph.
@@ -50,19 +50,51 @@ arose during the project...
 %==============================================================================
 \section{Case Study Background}
 
-Include details of 
+Include details of
 
 \subsection{Client Background}
 \begin{itemize}
 \item The customer organisation and background.
 \end{itemize}
 
-\subsection{Initial Objective}
-\begin{itemize}
-\item Clubs
-\item Teams
-\item Players
-\end{itemize}
+\subsection{Initial Objectives}
+As mentioned above, our client's primary objective is to help coaches build
+stronger and more successful teams, by providing them with one of the greatest
+and free team management systems. However, being privileged enough to have been
+part of the vast rugby community, our clients realized that this was not enough,
+and something should be done in order to try and grow this community even bigger.
+As a result, our project motivation and initial objective was to build an on-line
+social rugby platform, from where rugby lovers would be able to follow any
+updates concerning not only their favourite rugby Teams,Clubs and Players, but also
+the rugby world as a whole.
+
+GRNFanZone, was developed as a Web Application, and aims to provide Users a way of
+interacting with their favourite Clubs, Teams and Players, inside a user-friendly
+environment. The two initial target audiences included the Profile-Owners, and the
+Profile followers.
+
+Profile-Followers consist of all the Users interested on keeping their knowledge about
+rugby up to date. As an initial step, followers should use either their Facebook account
+or their Google account, in order to register with FanZone. By doing so, followers
+are able to start following on the spot, by just clicking the follow button which
+appears next to each of their favourite group's resulting profile picture. In addition,
+included in the initial Objectives, was to give followers the ability to maintain their
+own profile page, where all of their followed Teams,Clubs and Players would be displayed
+in a good manner. In this way, Users would be able to navigate almost to every other
+page of the App, starting from their very own profile page. In addition, followers
+should have the ability to read about future events and upcoming nearby fixtures, and 
+learn about their location by using the Google maps.
+
+On the other hand, Profile-Owners consist of all the Clubs, Teams and Players despite
+of their level. Profile owners, should be able to maintain their very own profile page,
+where all the important information concerning the Club/Team or Player, would be released
+to its profile-followers. For our project's initial Objective, those information should
+have the form of a text Post, on which followers should be able to comment, like and read
+comments posted by other followers as well.
+
+As a result, some could argue that our Project Motivation was to use technology, and help
+rugby community generate additional engagement not only with potential followers and
+supporters, but with sponsors as well.
 
 \subsection{Summary}
 \begin{itemize}
