--- a/Documentation/Dissertation/dissertation.bib
+++ b/Documentation/Dissertation/dissertation.bib
@@ -55,3 +55,21 @@
   pages={251--257},
   year={2012}
 }
+
+%https://www.agilealliance.org/agile101/
+@misc{agile_overview,
+  title={Agile 101},
+  howpublished =
+  {\url{https://www.agilealliance.org/agile101/}},
+  note = {Accessed: 2017-03-24},
+  author = {Agile Alliance}
+  }
+  
+%https://www.scrumalliance.org/why-scrum
+@misc{scrum_overview,
+  title={Learn about Scrum},
+  howpublished = 
+  {\url{https://www.scrumalliance.org/why-scrum}},
+  note = {Accessed: 2017-03-24},
+  author = {Scrum Alliance}
+  }
